# EasyAsCommands

./: README.md  pyproject.toml
_for_developers/: README.md  eac_api.py  example.py
src/endstone_easyascommands/: __init__.py  easyascommands.py  manager.py
src/endstone_easyascommands/API/: integrations.py  types.py
src/endstone_easyascommands/Manage/: add.py  edit.py  submit.py
src/endstone_easyascommands/Utils/: utils.py
src/endstone_easyascommands/_for_developers/: README.md  eac_api.py
